# haskell-swift

./: FAQ.md  README.md
dev-scripts/: publish-swift-package.sh
haskell-ffi/: Package.swift
haskell-ffi/Sources/HaskellFFI/: HaskellFFI.swift
haskell-ffi/Sources/HaskellFFIMacros/: ForeignImportHaskellMacro.swift
haskell-ffi/Tests/HaskellFFITests/: HaskellFFITests.swift
hxs/: .gitignore  CHANGELOG.md  cabal.project  hxs.cabal
hxs/app/: Build.hs  Common.hs  Configure.hs  Init.hs  Main.hs  XCodeGen.hs
hxs/test/AppT1/AppT1/: AppT1App.swift  ContentView.swift
hxs/test/AppT1/AppT1.xcodeproj/: project.pbxproj
hxs/test/AppT2/AppT2/: AppT2App.swift  ContentView.swift
hxs/test/AppT2/AppT2.xcodeproj/: project.pbxproj
swift-ffi/: CHANGELOG.md  TALK.md  cabal.project  swift-ffi.cabal
swift-ffi/src/Foreign/: Swift.hs
swift-ffi/src/Foreign/Swift/: Lib.hs  Marshal.hs  Plugin.hs  SetupHooks.hs  Utils.hs
swift-ffi/test/: Main.hs
xcframework/: CHANGELOG.md  LICENSE  README.md  xcframework.cabal
xcframework/src/Distribution/XCFramework/: SetupHooks.hs
