cabal-version:      3.4
name:               hxs
version:            0.1.0.0
synopsis:           Tool to facilitate Haskell x Swift interoperability
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rodrigo Mesquita
maintainer:         rodrigo.m.mesquita@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hxs
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.18,
                      optparse-generic >= 1.5, optparse-applicative,
                      shake >= 0.19,
                      directory >= 1.3,
                      filepath >= 1.4.100,
                      aeson >= 2.2, yaml >= 0.11
                      bytestring
    hs-source-dirs:   app
    default-language: GHC2021
