cabal-version:      3.4
name:               swift-ffi
version:            0.1.0.0
synopsis:           Swift interoperability
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rodrigo Mesquita
maintainer:         rodrigo.m.mesquita@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
common extensions
    default-extensions: ForeignFunctionInterface,
                        BlockArguments,
                        TemplateHaskell,
                        ViewPatterns

library
    import:           warnings, extensions
    exposed-modules:  Foreign.Swift
                      Foreign.Swift.Marshal
                      Foreign.Swift.Lib
                      Foreign.Swift.SetupHooks
                      Foreign.Swift.Utils

    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.17,
                      aeson,
                      bytestring,
                      filepath, directory,
                      template-haskell,
                      mtl,
                      moat,
                      -- automatic swift lib SetupHooks
                      Cabal-hooks >= 3.14,
                      ghc >= 9.10
    hs-source-dirs:   src
    default-language: GHC2021

test-suite swift-ffi-test
    import:           warnings, extensions
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        swift-ffi
