cabal-version:      3.14
name:               xcframework
version:            0.1.0.0
synopsis:
    Cabal hooks for producing an XCFramework from a Haskell library

-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rodrigo Mesquita
maintainer:         rodrigo.m.mesquita@gmail.com
-- copyright:
category:           Distribution
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Distribution.XCFramework.SetupHooks
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.20, Cabal >= 3.14, Cabal-hooks >= 3.14, filepath, directory, process, temporary
    hs-source-dirs:   src
    default-language: GHC2024
