cabal-version:      3.14
name:               xcframework
version:            0.1.0.0
synopsis:
    Cabal hooks for producing an XCFramework from a Haskell library

description:        Cabal hooks for producing an XCFramework from a
                    Haskell library bundling the library binary artifact,
                    the RTS and foreign-exports headers, and a modulemap
                    exporting the headers as Swift modules.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rodrigo Mesquita
maintainer:         rodrigo.m.mesquita@gmail.com
homepage:           https://github.com/alt-romes/haskell-swift
bug-reports:        https://github.com/alt-romes/haskell-swift
copyright:          Copyright (C) 2025 Rodrigo Mesquita
category:           Distribution
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md

source-repository head
    type: git
    location: https://github.com/alt-romes/haskell-swift

library
    exposed-modules:  Distribution.XCFramework.SetupHooks
    ghc-options:      -Wall
    build-depends:    Cabal >= 3.14.1 && < 4,
                      Cabal-hooks >= 3.14 && < 4,
                      base >= 4.18 && < 5,
                      directory >= 1.3.8 && < 2,
                      filepath >= 1.5.2 && < 2,
                      process >= 1.6.19 && < 2,
                      temporary >= 1.3 && < 1.4,
    hs-source-dirs:   src
    default-language: GHC2021
